# meson-cross-files

./: .gitignore  Readme.md  all.py  arm.py  cross_definitions.py  meson.build  mingw.py  misc.py
